--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title>Hua</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
     Hello, my name is Hua.
-
+    <h1>Hello, Code School!</h1>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JAVASCRIPT</li>
+      <li>PHP</li>
+    </ul>
   </body>
 </html>
